指定镜像名称

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 services:
   mts:
-    build: .
+    build: 
+      context:.
+      dockerfile: Dockerfile
+      tags:
+        - my-python-app:latest
     volumes:
-      - '.:/app'
+      - '.:/app' 
