--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
       context:.
       dockerfile: Dockerfile
       tags:
-        - my-python-app:latest
+      - mts-app:latest
     volumes:
       - '.:/app' 
