--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,5 @@
 services:
   mts:
-    build: 
-      context:.
-      dockerfile: Dockerfile
-      tags:
-      - mts:latest
+    build: .
     volumes:
       - '.:/app' 
